--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This middleware will trigger a callback function as a google sheet gets updated",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "rm -rf dist && tsc -p ./",
+    "watch": "tsc -w -p ./",
+    "lint": "eslint src/*",
+    "lint:fix": "eslint --fix src/*"
   },
   "repository": {
     "type": "git",
@@ -16,7 +19,18 @@
     "url": "https://github.com/adrijshikhar/google-sheets-middleware/issues"
   },
   "homepage": "https://github.com/adrijshikhar/google-sheets-middleware#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@types/chai": "^3.5.2",
+    "@types/mocha": "^2.2.33",
+    "@types/node": "^6.14.7",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "angular-tslint-rules": "^1.20.1",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
