Add eslintignore Update eslintrc Add App.ts Add index.ts Update tsconfig.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,16 @@
   "plugins": [
     "@typescript-eslint"
   ],
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "rules": {
     "semi": [
       "error",
@@ -11,6 +21,7 @@
     "quotes": [
       2,
       "single"
-    ]
+    ],
+    "no-console":"warn"
   }
 }
