--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This middleware will trigger a callback function as a google sheet gets updated",
   "main": "index.ts",
   "scripts": {
-    "compile": "rm -rf dist && tsc -p ./",
-    "watch": "tsc -w -p ./",
+    "build": "rm -rf dist && tsc -p ./",
+    "dev": "nodemon --watch 'src/' --exec 'ts-node' src/index.ts",
     "lint": "eslint src/*",
     "lint:fix": "eslint --fix src/*"
   },
@@ -21,13 +21,17 @@
   "homepage": "https://github.com/adrijshikhar/google-sheets-middleware#readme",
   "devDependencies": {
     "@types/chai": "^3.5.2",
+    "@types/express": "^4.17.4",
     "@types/mocha": "^2.2.33",
-    "@types/node": "^6.14.7",
+    "@types/node": "^13.9.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "angular-tslint-rules": "^1.20.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
