--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "@types/chai": "^3.5.2",
     "@types/express": "^4.17.4",
     "@types/mocha": "^2.2.33",
-    "@types/node": "^13.9.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "angular-tslint-rules": "^1.20.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
-    "nodemon": "^2.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/node": "^13.9.8",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2"
   }
 }
